@@ -46,8 +46,10 @@ class CMenu extends CWidget
 	 * @var array list of menu items. Each menu item is specified as an array of name-value pairs.
 	 * Possible option names include the following:
 	 * <ul>
-	 * <li>label: string, optional, specifies the menu item label. When {@link encodeLabel} is true, the label
+	 * <li>label: string, optional, specifies the menu item label. When {@link encodeLabel} or own encodeLabel option is true, the label
 	 * will be HTML-encoded. If the label is not specified, it defaults to an empty string.</li>
+	 * <li>encodeLabel: boolean whether the label for menu item should be HTML-encoded.
+	 * When this option is set, it will override the global setting {@link encodeLabel}. This option has been available since version 1.1.15.</li>
 	 * <li>url: string or array, optional, specifies the URL of the menu item. It is passed to {@link CHtml::normalizeUrl}
 	 * to generate a valid URL. If this is not set, the menu item will be rendered as a span text.</li>
 	 * <li>visible: boolean, optional, whether this menu item is visible. Defaults to true.
@@ -269,7 +271,8 @@ class CMenu extends CWidget
 			}
 			if(!isset($item['label']))
 				$item['label']='';
-			if($this->encodeLabel)
+			$encodeLabel = isset($item['encodeLabel']) ? $item['encodeLabel'] : $this->encodeLabel;
+			if($encodeLabel)
 				$items[$i]['label']=CHtml::encode($item['label']);
 			$hasActiveChild=false;
 			if(isset($item['items']))
